fix: subnav items alignment and background color

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -42,7 +42,7 @@ nav {
 .nav-item:not(.has-sub) > a:not(.highlight).nav-text{
 	position: relative;
 	&:hover{
-		background-image: var(--background-grey);
+		// background-image: var(--background-grey);
 
 		&::after{
 		  width: 100%;
@@ -121,7 +121,7 @@ a.nav-text:hover {
 		}
 	}
 	&:hover{
-		background-image: var(--background-grey);
+		// background-image: var(--background-grey);
 	}
 }
 
@@ -200,6 +200,7 @@ a.nav-text:hover {
 	width:100%;
 	background-size: cover;
 	display: flex !important;
+	justify-content: space-between;
 	gap: 5px !important;
 }
 
